# kefta

./: Cargo.toml  readme.md
kefta/: Cargo.toml
kefta/src/: error.rs  lib.rs  map.rs  node.rs  parse.rs  stream.rs  traits.rs  values.rs
kefta_builtin/: Cargo.toml
kefta_builtin/src/: lib.rs  parser.rs
kefta_core/: Cargo.toml  example.rs
kefta_core/src/: error.rs  from.rs  lib.rs  model.rs  node.rs  parse.rs  parser.rs  types.rs  util.rs  visitor.rs
kefta_core/src/_syn/: mod.rs  source.rs  types.rs
kefta_core/src/domains/: mod.rs  other.rs
kefta_core/src/domains/builtin/: error.rs  mod.rs  parser.rs  source.rs  types.rs
kefta_core/src/model/: error.rs  from.rs  mod.rs  parser.rs  receiver.rs  source.rs  visitor.rs
kefta_core/src/node/: error.rs  mod.rs  node.rs  parse.rs  source.rs  stream.rs
kefta_core/src/parse/: constructs.rs  container.rs  ident.rs  map.rs  mod.rs  model.rs  traits.rs  value.rs  values.rs
kefta_core/src/parse/ext/: _syn.rs  literal.rs  mod.rs
kefta_core/src/parsers/: mod.rs  other.rs
kefta_core/src/parsers/_syn/: source.rs
kefta_core/src/parsers/builtin/: mod.rs  parser.rs  source.rs
kefta_core/src/parsers/syn/: error.rs  mod.rs
kefta_core/src/structs/: map.rs  mod.rs  parse.rs  traits.rs
kefta_core/src/syn/: mod.rs  source.rs  types.rs
kefta_core/src/token/: mod.rs  node.rs  parse.rs  stream.rs
kefta_core/src/types/: _syn.rs  core.rs  literal.rs  mod.rs  syn.rs  token.rs
kefta_core/src/util/: case.rs  mod.rs  named.rs  syn.rs
kefta_macro/: Cargo.toml
kefta_macro/src/: attr.rs  attr_struct.rs  attrs.rs  expr.rs  lib.rs  nodes.rs  proc.rs
kefta_macro/src/attr/: attr.rs  mod.rs  modifier.rs
test/kefta_test/: Cargo.toml
test/kefta_test/src/: lib.rs
test/kefta_test_client/: Cargo.toml
test/kefta_test_client/src/: main.rs
test/test_bin/: Cargo.toml
test/test_bin/src/: main.rs
test/test_macro/: Cargo.toml
test/test_macro/src/: lib.rs
