[package]
name = "kefta"
version = "0.0.1"
edition = "2021"
description = "proc-macro for simplified attribute parsing"
repository = "https://github.com/samhdev/kefta"
license = "GPL-3.0-or-later"


[features]
default = ["literal"]
literal = ["kefta_core/literal"]
util = ["kefta_core/syn"]
syn = ["kefta_core/util"]

[dependencies]
kefta_macro = { path = "../kefta_macro", version = "0.0.1" }
kefta_core = { path = "../kefta_core", version = "0.0.1" }