[package]
name = "kefta"
version = "0.2.0-dev0"
edition = "2021"

[features]
derive = ["kefta_macro"]

spanned = ["kefta_core/spanned"]
syn = ["kefta_core/syn"]
literal = ["kefta_core/literal"]

default = ["derive", "literal", "spanned"]

[dependencies]
kefta_core = { path = "../kefta_core", version = "0.2.0-dev0" }
kefta_macro = { path = "../kefta_macro", optional = true, version = "0.2.0-dev0" }
