[package]
name = "kefta_core"
version = "0.0.1"
edition = "2021"

[features]
default = ["literal"]
literal = ["litrs"]
util = []
syn = ["dep:syn"]

[dependencies]
#quote = "1.0.20"
proc-macro2 = "1.0.43"
litrs = { version = "0.2.3", optional = true }
syn = { version = "1.0.98", features = ["full"], optional = true }