[package]
name = "kefta_core"
version = "0.1.0"
edition = "2021"

[features]
builtin = []
literal = ["dep:litrs"]
syn = ["dep:syn", "syn/parsing", "syn/derive", "syn/full", "syn/printing", "syn/extra-traits"]
default = ["builtin", "literal"]

[dependencies]
syn = { version = "2.0.33", default-features = false, optional =  true }
quote = "1.0.32"
proc-macro2 = "1.0.66"
litrs = { version = "0.4.0", optional = true }


[[example]]
name = "example"
path = "./example.rs"